# JTCP

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog  Doxyfile  LICENSE  README.md
.github/workflows/: static.yml
cmake/: BuildTemplate.cmake  JTCPConfig.cmake
example/: CMakeLists.txt  client.cpp  server.cpp
include/JTCP/: JTCP.h
include/JTCP/client/: client.h
include/JTCP/common/: common_define.h  file_describe.h
include/JTCP/server/: peer_client.h  server.h
interface/JTCP/: JTCP.h
interface/JTCP/common/: common_define.h  file_describe.h
interface/JTCP/server/: peer_client.h  server.h
src/client/: client.cpp
src/server/: peer_client.cpp  server.cpp
test/: CMakeLists.txt
test/tcp/: CMakeLists.txt  tcp.cpp
ut/: CMakeLists.txt
ut/JTCP/: CMakeLists.txt  ut_client.cpp  ut_server.cpp
